<resources>
    <plurals name="minute">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <string name="app_name">App for Submit MADE 4</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_app">Movie Catalogue</string>
    <string name="setting">Setting</string>
    <string name="choose_languange">Choose Language...</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="english" translatable="false">English</string>
    <string name="title_detail">Film Details</string>
    <string name="trailer_not">TRAILER NOT FOUND</string>
    <string name="release_date">Release date</string>
    <string name="con_fail_title">Connection Failed</string>
    <string name="con_fail_body">Please check your internet connection</string>
    <string name="server_eror">Server Error</string>
    <string name="server_eror_body">Try again later</string>
    <string name="no_overview">No Overview</string>

    <string name="apply">Apply</string>
    <string name="trailer" translatable="false">Trailer</string>
    <string name="read_synopsis">READ SYNOPSIS</string>
    <string name="hide">HIDE</string>
    <string name="status" translatable="false">Status :</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote count</string>
    <string name="original_language">Original language</string>
    <string name="set_as_favorite">Set as Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="message_favorite">Tap on any movie on the list and tap on the favorite button to add to the favorites list, so you can easily find it later.</string>

    <string name="favorite_key" translatable="false">key</string>

    <string name="remove">Removed from favorite</string>
    <string name="setfavorite">Set as favorite</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_movie">Search movie</string>
    <string name="search_tv">Search TV Show</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="exit">EXIT</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="reminder">Reminder</string>
    <string name="language">Language</string>
    <string name="daily_reminder_desc">Reminder for return to app</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder_desc">Reminder showing the movie that released today</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="number_of_notifications">Number of notifications</string>
    <string name="set_the_number_of_movie_notifications">Set the number of movie notifications</string>
    <string name="search_favorite">Search favorite</string>
</resources>
